Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132838

Debug build fails at rendererimpl

XMLWordPrintable

    • QNX
    • 2f8c559fb (dev), 387604c58 (6.9), 947b17237 (6.8), 1662285a9 (dev), 820d33c7d (6.9), 89eae1cac (6.8)

      qssglayerrenderdata.cpp and qssgrendererimplshaders_rhi.cpp

      1st:

      [2951/10856] Building CXX object qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssglayerrenderdata.cpp.o
      FAILED: qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssglayerrenderdata.cpp.o
      C:\QNX\qnx71\host\win64\x86_64\usr\bin\q++.exe -Vgcc_ntoaarch64le -Wc,-isysroot,C:/QNX/qnx71//target/qnx7 -lang-c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_QUICK3DRUNTIMERENDER_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_QSNPRINTF=1 -DQT_OPENGL_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QMLWORKERSCRIPT_LIB -DQT_QML_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK3D_HAS_RUNTIME_SHADERS -DQT_QUICK_LIB -DQT_SHADERTOOLS_LIB -DQT_USE_QSTRINGBUILDER -D_FORTIFY_SOURCE=2 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE -D_REENTRANT -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtquick3d/src/runtimerender/Quick3DRuntimeRender_autogen/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender -IC:/Qt/6.8.1/Src/qtquick3d/src/runtimerender -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtquick3d/src/runtimerender -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1/QtQuick3DRuntimeRender -IC:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/../3rdparty/tinyexr -IC:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/../3rdparty/embree/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore -IC:/Qt/6.8.1/Src/qtbase/mkspecs/qnx-aarch64le-qcc -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtGui -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQml -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlIntegration -IC:/Qt/6.8.1/Src/qtdeclarative/src/qmlintegration -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlintegration -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtNetwork -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlMeta -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlModels -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlWorkerScript -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtOpenGL -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DUtils -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtquick3d/src/utils -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DUtils/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DUtils/6.8.1/QtQuick3DUtils -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1/QtCore -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/gui -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtGui/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtGui/6.8.1/QtGui -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/quick -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick/6.8.1/QtQuick -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlmodels -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlModels/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlModels/6.8.1/QtQmlModels -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qml -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQml/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQml/6.8.1/QtQml -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlmeta -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlMeta/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlMeta/6.8.1/QtQmlMeta -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlworkerscript -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlWorkerScript/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlWorkerScript/6.8.1/QtQmlWorkerScript -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtShaderTools -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtshadertools/src/shadertools -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtShaderTools/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtShaderTools/6.8.1/QtShaderTools -g -g -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -Wno-invalid-offsetof -fstack-protector-strong -fstack-clash-protection -Wp,-MD,qtquick3d\src\runtimerender\CMakeFiles\Quick3DRuntimeRender.dir\rendererimpl\qssglayerrenderdata.cpp.o.d -Wp,-MT,qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssglayerrenderdata.cpp.o -Wp,-MF,qtquick3d\src\runtimerender\CMakeFiles\Quick3DRuntimeRender.dir\rendererimpl\qssglayerrenderdata.cpp.o.d -o qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssglayerrenderdata.cpp.o -c C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp
      In file included from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qassert.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qtypes.h:11,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qtypes.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/tools/qcontainerfwd.h:8,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qcontainerfwd.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/io/qdebug.h:12,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qdebug.h:1,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/QDebug:1,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/graphobjects/qssgrendergraphobject.h:18,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1/QtQuick3DRuntimeRender/ssg/qssgrendergraphobject.h:1,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/graphobjects/qssgrendergraphobject_p.h:19,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1/QtQuick3DRuntimeRender/private/qssgrendergraphobject_p.h:1,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/graphobjects/qssgrenderitem2d_p.h:18,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1/QtQuick3DRuntimeRender/private/qssgrenderitem2d_p.h:1,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata_p.h:20,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp:5:
      C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp: In function 'constexpr size_t pipelineStateIndex(QSSGRenderablesFilter)':
      C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:46:87: error: call to non-'constexpr' function 'void qt_assert_x(const char*, const char*, const char*, int)'
       #    define Q_ASSERT_X(cond, where, what) ((cond) ? static_cast<void>(0) : qt_assert_x(where, what, __FILE__, __LINE__))
                                                                                  ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:70:9: note: in expansion of macro 'Q_ASSERT_X'
               Q_ASSERT_X(false, "Q_UNREACHABLE()", "Q_UNREACHABLE was reached");\
               ^~~~~~~~~~
      C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:78:44: note: in expansion of macro 'Q_UNREACHABLE'
       #    define Q_UNREACHABLE_RETURN(...) do { Q_UNREACHABLE(); return __VA_ARGS__; } while (0)
                                                  ^~~~~~~~~~~~~
      C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssglayerrenderdata.cpp:745:5: note: in expansion of macro 'Q_UNREACHABLE_RETURN'
           Q_UNREACHABLE_RETURN(0);
           ^~~~~~~~~~~~~~~~~~~~
      cc: C:/QNX/qnx71//host/win64/x86_64/usr/lib/gcc/aarch64-unknown-nto-qnx7.1.0/8.3.0/cc1plus caught signal 1 

       

      After "fixing" that, then:

      [3183/10856] Building CXX object qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssgrendererimplshaders_rhi.cpp.o
      FAILED: qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssgrendererimplshaders_rhi.cpp.o
      C:\QNX\qnx71\host\win64\x86_64\usr\bin\q++.exe -Vgcc_ntoaarch64le -Wc,-isysroot,C:/QNX/qnx71//target/qnx7 -lang-c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_QUICK3DRUNTIMERENDER_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_QSNPRINTF=1 -DQT_OPENGL_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QMLWORKERSCRIPT_LIB -DQT_QML_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK3D_HAS_RUNTIME_SHADERS -DQT_QUICK_LIB -DQT_SHADERTOOLS_LIB -DQT_USE_QSTRINGBUILDER -D_FORTIFY_SOURCE=2 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE -D_REENTRANT -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtquick3d/src/runtimerender/Quick3DRuntimeRender_autogen/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender -IC:/Qt/6.8.1/Src/qtquick3d/src/runtimerender -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtquick3d/src/runtimerender -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DRuntimeRender/6.8.1/QtQuick3DRuntimeRender -IC:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/../3rdparty/tinyexr -IC:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/../3rdparty/embree/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore -IC:/Qt/6.8.1/Src/qtbase/mkspecs/qnx-aarch64le-qcc -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtGui -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQml -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlIntegration -IC:/Qt/6.8.1/Src/qtdeclarative/src/qmlintegration -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlintegration -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtNetwork -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlMeta -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlModels -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlWorkerScript -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtOpenGL -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DUtils -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtquick3d/src/utils -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DUtils/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick3DUtils/6.8.1/QtQuick3DUtils -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1/QtCore -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/gui -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtGui/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtGui/6.8.1/QtGui -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/quick -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQuick/6.8.1/QtQuick -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlmodels -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlModels/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlModels/6.8.1/QtQmlModels -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qml -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQml/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQml/6.8.1/QtQml -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlmeta -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlMeta/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlMeta/6.8.1/QtQmlMeta -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtdeclarative/src/qmlworkerscript -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlWorkerScript/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtQmlWorkerScript/6.8.1/QtQmlWorkerScript -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtShaderTools -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtshadertools/src/shadertools -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtShaderTools/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtShaderTools/6.8.1/QtShaderTools -g -g -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -Wno-invalid-offsetof -fstack-protector-strong -fstack-clash-protection -Wp,-MD,qtquick3d\src\runtimerender\CMakeFiles\Quick3DRuntimeRender.dir\rendererimpl\qssgrendererimplshaders_rhi.cpp.o.d -Wp,-MT,qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssgrendererimplshaders_rhi.cpp.o -Wp,-MF,qtquick3d\src\runtimerender\CMakeFiles\Quick3DRuntimeRender.dir\rendererimpl\qssgrendererimplshaders_rhi.cpp.o.d -o qtquick3d/src/runtimerender/CMakeFiles/Quick3DRuntimeRender.dir/rendererimpl/qssgrendererimplshaders_rhi.cpp.o -c C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssgrendererimplshaders_rhi.cpp
      In file included from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qassert.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qtypes.h:11,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qtypes.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/thread/qgenericatomic.h:10,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qgenericatomic.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/thread/qatomic_cxx11.h:8,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qatomic_cxx11.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/thread/qbasicatomic.h:8,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qbasicatomic.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/thread/qatomic.h:8,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qatomic.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/tools/qrefcount.h:7,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qrefcount.h:1,
                       from C:/Qt/6.8.1/Src/qtbase/src/corelib/text/qbytearray.h:8,
                       from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qbytearray.h:1,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssgrendererimplshaders_p.h:7,
                       from C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssgrendererimplshaders_rhi.cpp:5:
      C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssgrendererimplshaders_rhi.cpp: In function 'constexpr size_t getSkyboxIndex(QSSGRenderLayer::TonemapMode, bool)':
      C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:46:87: error: call to non-'constexpr' function 'void qt_assert_x(const char*, const char*, const char*, int)'
       #    define Q_ASSERT_X(cond, where, what) ((cond) ? static_cast<void>(0) : qt_assert_x(where, what, __FILE__, __LINE__))
                                                                                  ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:70:9: note: in expansion of macro 'Q_ASSERT_X'
               Q_ASSERT_X(false, "Q_UNREACHABLE()", "Q_UNREACHABLE was reached");\
               ^~~~~~~~~~
      C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:78:44: note: in expansion of macro 'Q_UNREACHABLE'
       #    define Q_UNREACHABLE_RETURN(...) do { Q_UNREACHABLE(); return __VA_ARGS__; } while (0)
                                                  ^~~~~~~~~~~~~
      C:/Qt/6.8.1/Src/qtquick3d/src/runtimerender/rendererimpl/qssgrendererimplshaders_rhi.cpp:94:5: note: in expansion of macro 'Q_UNREACHABLE_RETURN'
           Q_UNREACHABLE_RETURN(0);
           ^~~~~~~~~~~~~~~~~~~~
      cc: C:/QNX/qnx71//host/win64/x86_64/usr/lib/gcc/aarch64-unknown-nto-qnx7.1.0/8.3.0/cc1plus caught signal 1 

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtbuildsystem Qt Build System Team
            tommimtauriainen Tommi M. Tauriainen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: