Fix the unsupported Q_UNREACHABLE_RETURN statement in constexpr functions

GCC 8.x does not treat __builtin_unreachable() as constexpr and
disallows using the Q_UNREACHABLE_RETURN macro. Guard the statements
with the respective checks.

Fixes: QTBUG-132838
Change-Id: Idad27df6229b987de078bcbe3c450770101cf352
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit 2f8c559fbdbfea2ce132b817ec022b5c2796f2d6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 387604c587aed53b82e428fe5c956048ea226494)