src/runtimerender/rendererimpl/qssglayerrenderdata.cpp
@@ -742,7 +742,12 @@ static constexpr size_t pipelineStateIndex(QSSGRenderablesFilter filter)
         return 2;
     }
 
-    Q_UNREACHABLE_RETURN(0);
+    // GCC 8.x does not treat __builtin_unreachable() as constexpr
+#  if !defined(Q_CC_GNU_ONLY) || (Q_CC_GNU >= 900)
+    // NOLINTNEXTLINE(qt-use-unreachable-return): Triggers on Clang, breaking GCC 8
+    Q_UNREACHABLE();
+#  endif
+    return 0;
 }
 
 void QSSGLayerRenderData::prepareRenderables(QSSGRenderContextInterface &ctx,
